# portwatch

./: CLAUDE.md  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
Formula/: portwatch.rb
docs/: DESIGN.md  ROADMAP.md
src/: actions.rs  app.rs  config.rs  git.rs  main.rs  resources.rs  types.rs
src/detect/: command_line.rs  docker.rs  mod.rs  npm_package.rs  port_hints.rs  project_files.rs
src/process/: linux.rs  macos.rs
src/scanner/: linux.rs  macos.rs  mod.rs
src/ui/: action_bar.rs  detail_view.rs  mod.rs  port_list.rs  status_bar.rs
